--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   font-family: "Inconsolata", monospace;
   line-height: 1.8;
   font-size: 20px;
-  background: #f0f0f0;
+  background: #000000;
   font-weight: 300;
   letter-spacing: 1px;
   color: #333333; }
